threw out SOAP references and reorganized protection proxy samples