@@ -110,6 +110,9 @@
                 <configuration>
                     <source>13</source>
                     <target>13</target>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                 </configuration>
